<resources>
  <string name="app_name">Freight</string>
  <string name="phone_number">Номер телефона</string>
  <string name="user_name">Имя</string>
  <string name="customer">Заказчик</string>
  <string name="driver">Водитель</string>
  <string name="get_registration_code">Получить код регистрации</string>
  <string name="registration_code">Полученный код регистрации</string>
  <string name="confirm_registration">Подтвердить регистрацию</string>
  <string name="select_origin">Выберите место отправки</string>
  <string name="select_destination">Выберите место назначения</string>
  <string name="place_order">Разместить заказ</string>
  <string name="select_order_date_and_time">Выберите дату и время</string>
  <string name="weight">Вес (кг)</string>
  <string name="volume">Объем (м3)</string>
  <string name="title_activity_map">Map</string>
  <string name="order_fulfilled">Заказ выполнен</string>
  <string name="cancel_order">Отменить заказ</string>
  <string name="offers">Предложения:</string>
  <string name="carrying">Грузоподъемность (т)</string>
  <string name="make_year">Год выпуска</string>
  <string name="save">Сохранить</string>
  <string-array name="cities">
    <item>Астана</item>
    <item>Алматы</item>
    <item>Караганда</item>
    <item>Павлодар</item>
  </string-array>
  <string-array name="cargoTypes">
    <item>Негабаритный груз</item>
    <item>Крупногабаритный груз</item>
    <item>Сыпучий груз</item>
    <item>Жидкий груз</item>
    <item>Газообразный груз</item>
  </string-array>
  <string-array name="offers">
    <item>Валера, Mercedes, 56000 тг</item>
    <item>Иван, МАЗ, 54000 тг</item>
    <item>Санжар, КамАЗ, 51000 тг</item>
  </string-array>
  <string-array name="customer_orders">
    <item>Астана - Павлодар | 30.11.15 15:00</item>
    <item>Астана, пр. Республики, 12 - Астана, ул. Сейфуллина, 46 | 05.12.15 10:00</item>
  </string-array>
  <string-array name="driver_orders">
    <item>Астана, ул. Мира, 14 - пр. Кабанбай батыра, 30 | 28.12.15 10:00 | 6000 тг</item>
    <item>Астана - Павлодар | 30.11.15 15:00 | 52000 тг</item>
    <item>Астана - Караганда | 02.12.15 18:00 | 36000 тг</item>
  </string-array>
  <string-array name="makes">
    <item>Газель</item>
    <item>МАЗ</item>
    <item>КамАЗ</item>
    <item>Mercedes</item>
  </string-array>
  <string-array name="models">
    <item>Super</item>
    <item>Next</item>
  </string-array>
  <string-array name="body_types">
    <item>Бортовой</item>
    <item>Тентованный</item>
    <item>Рефрижератор</item>
    <item>Самосвал</item>
  </string-array>
</resources>
