<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="rt.dtech.kz.freight.activities.OrderDetailActivity">

<TextView
    android:id="@+id/orderOriginTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="Откуда: Астана"/>

  <TextView
    android:id="@+id/orderDestinationTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/orderOriginTextView"
    android:text="Куда: Павлодар"/>

  <TextView
    android:id="@+id/orderDateTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/orderDestinationTextView"
    android:text="Дата: 30.11.15 15:00"/>

  <TextView
    android:id="@+id/orderCargoTypeTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/orderDateTextView"
    android:text="Тип груза: крупногабаритный"/>

  <TextView
    android:id="@+id/orderCargoWeightTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/orderCargoTypeTextView"
    android:text="Вес груза: 12000 кг"/>

  <TextView
    android:id="@+id/orderCargoVolumeTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/orderCargoWeightTextView"
    android:text="Объем груза: 6 м3"/>

  <TextView
    android:id="@+id/orderApproximateCostTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/orderCargoVolumeTextView"
    android:text="Приблизительная стоимость: 52000 тг"/>

  <TextView
    android:id="@+id/offersTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/orderApproximateCostTextView"
    android:text="@string/offers"/>

  <ListView
    android:id="@+id/offersListView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/offersTextView"/>

  <Button
    android:id="@+id/orderFulfilledButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:text="@string/order_fulfilled"/>

  <Button
    android:id="@+id/cancelOrderButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_toRightOf="@id/orderFulfilledButton"
    android:text="@string/cancel_order"/>

</RelativeLayout>
